scripts/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monet-backend-service
spec:
  type: LoadBalancer
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: monet-backend
