scripts/monet-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monet-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: monet-generator.hungwevision.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: monet-backend-service
            port:
              number: 8000
  tls:
  - hosts:
    - monet-generator.hungwevision.com
    secretName: monet-backend-tls
